new endpoint for fetching small amount of recent orders
